force-app/main/default/objects/AA_Employee_Working_Hour__c/AA_Employee_Working_Hour__c.object-meta.xml
<CustomObject>
    <label>AA Employee Working Hour</label>
    <nameField>
        <label>AA Employee Working Hour Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AA Employee Working Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>