force-app/main/default/objects/AA_Employee_Working_Hour__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>AA_Employee__c</referenceTo>
    <relationshipLabel>Employee Working Hours</relationshipLabel>
    <relationshipName>Employee_Working_Hours</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>