force-app/main/default/objects/AA_Employee_Working_Hour__c/fields/End_Default_Break_Hour__c.field-meta.xml
<CustomField>
    <fullName>End_Default_Break_Hour__c</fullName>
    <label>End Default Break Hour</label>
    <type>Time</type>
</CustomField>