force-app/main/default/objects/AA_Employee_Working_Hour__c/fields/End_Hour__c.field-meta.xml
<CustomField>
    <fullName>End_Hour__c</fullName>
    <label>End Hour</label>
    <required>true</required>
    <type>Time</type>
</CustomField>