force-app/main/default/objects/AA_Employee_Working_Hour__c/fields/Start_Default_Break_Hour__c.field-meta.xml
<CustomField>
    <fullName>Start_Default_Break_Hour__c</fullName>
    <label>Start Default Break Hour</label>
    <type>Time</type>
</CustomField>