force-app/main/default/objects/AA_Employee_Working_Hour__c/fields/Start_Hour__c.field-meta.xml
<CustomField>
    <fullName>Start_Hour__c</fullName>
    <label>Start Hour</label>
    <required>true</required>
    <type>Time</type>
</CustomField>