force-app/main/default/objects/AA_Employee_Working_Hour__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Day_Of_Week__c</columns>
    <columns>Start_Hour__c</columns>
    <columns>End_Hour__c</columns>
    <columns>Start_Default_Break_Hour__c</columns>
    <columns>End_Default_Break_Hour__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>