force-app/main/default/objects/AA_Employee_Working_Hour__c/listViews/Silvina_Unas.listView-meta.xml
<ListView>
    <fullName>Silvina_Unas</fullName>
    <columns>NAME</columns>
    <columns>Day_Of_Week__c</columns>
    <columns>Start_Hour__c</columns>
    <columns>End_Hour__c</columns>
    <columns>Start_Default_Break_Hour__c</columns>
    <columns>End_Default_Break_Hour__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Silvina</value>
    </filters>
    <label>Silvina Uñas</label>
</ListView>